--- a/Developpement/templates/base.html
+++ b/Developpement/templates/base.html
@@ -34,7 +34,7 @@
             <span class="icon-bar"></span>
           </button>
           <!-- <a class="navbar-brand" href="#">Divertimento</a> -->
-          <img class="navbar-brand" href="#" src="{{ url_for('static',filename='img/logo-quatuor.png') }}" alt="logo">
+          <a href="/quatuor/presentation/"><img class="navbar-brand" href="#" src="{{ url_for('static',filename='img/logo-quatuor.png') }}" alt="logo"></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
