--- a/Developpement/templates/stage/stage_recettes.html
+++ b/Developpement/templates/stage/stage_recettes.html
@@ -99,33 +99,32 @@ function m(){
     <article id="entree">
       <div class="titre">
         <h1>Les Entrées</h1>
-        <img class="underline" src="{{ url_for('static',filename='img/underline3.png') }}" alt="underline">
       </div>
       <div class="row">
         <div class="col-sm-6 col-sm-6">
           <div class="texte">
-            <embed src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
-            <h3>Vélouté de Potiron et de Carottes <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
+            <h3>Tarte aux poires <a download="tarte_poire.pdf" href="{{ url_for('static',filename='fichier_statique/tarte_poire.pdf')}}" ><span class="glyphicon glyphicon-save"></span></a></h3>
+            <embed class="pdf" src="{{ url_for('static',filename='fichier_statique/tarte_poire.pdf')}}" width=75% height=800em type='application/pdf'/>
           </div>
         </div>
         <div class="col-sm-6 col-sm-6">
           <div class="texte">
-          <embed src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
-          <h3>Soupe aux Chou Vert <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
+          <h3>Tartes aux pommes <a download="tarte_pomme.pdf" href="{{ url_for('static',filename='fichier_statique/tarte_pomme.pdf')}}" ><span class="glyphicon glyphicon-save"></span></a></h3>
+          <embed class="pdf" src="{{ url_for('static',filename='fichier_statique/tarte_pomme.pdf')}}" width=75% height=800em type='application/pdf'/>
         </div>
         </div>
       </div>
         <div class="row">
             <div class="col-sm-6 col-sm-6">
               <div class="texte">
-              <embed src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
-              <h3>Flan de Courgettes <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
+              <h3>Flan de Courgettes <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><span class="glyphicon glyphicon-save"></span></a></h3>
+              <embed class="pdf" src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
             </div>
             </div>
             <div class="col-sm-6 col-sm-6">
               <div class="texte">
-              <embed src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
-              <h3>Terrine de poisson au basilic <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
+              <h3>Terrine de poisson au basilic <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><span class="glyphicon glyphicon-save"></span></a></h3>
+              <embed class="pdf" src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
             </div>
           </div>
         </div>
@@ -135,33 +134,32 @@ function m(){
     <article id="plat">
       <div class="titre">
         <h1>Les Plats Principaux</h1>
-        <img class="underline" src="{{ url_for('static',filename='img/underline3.png') }}" alt="underline">
       </div>
       <div class="row">
         <div class="col-sm-6 col-sm-6">
           <div class="texte">
-            <embed src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
-            <h3>Vélouté de Potiron et de Carottes <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
+            <h3>Vélouté de Potiron et de Carottes <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><span class="glyphicon glyphicon-save"></span></a></h3>
+            <embed class="pdf" src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
           </div>
         </div>
         <div class="col-sm-6 col-sm-6">
           <div class="texte">
-          <embed src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
-          <h3>Soupe aux Chou Vert <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
+          <h3>Soupe aux Chou Vert <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><span class="glyphicon glyphicon-save"></span></a></h3>
+          <embed class="pdf" src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
         </div>
         </div>
       </div>
         <div class="row">
             <div class="col-sm-6 col-sm-6">
               <div class="texte">
-              <embed src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
-              <h3>Flan de Courgettes <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
+              <h3>Flan de Courgettes <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><span class="glyphicon glyphicon-save"></span></a></h3>
+              <embed class="pdf" s="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
             </div>
             </div>
             <div class="col-sm-6 col-sm-6">
               <div class="texte">
-              <embed src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
-              <h3>Terrine de poisson au basilic <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
+              <h3>Terrine de poisson au basilic <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><span class="glyphicon glyphicon-save"></span></a></h3>
+              <embed class="pdf" src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
             </div>
           </div>
         </div>
@@ -171,33 +169,32 @@ function m(){
     <article id="dessert">
       <div class="titre">
         <h1>Les Desserts</h1>
-        <img class="underline" src="{{ url_for('static',filename='img/underline3.png') }}" alt="underline">
       </div>
       <div class="row">
         <div class="col-sm-6 col-sm-6">
           <div class="texte">
-            <embed src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
-            <h3>Vélouté de Potiron et de Carottes <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
+            <h3>Vélouté de Potiron et de Carottes <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><span class="glyphicon glyphicon-save"></span></a></h3>
+            <embed class="pdf" src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
           </div>
         </div>
         <div class="col-sm-6 col-sm-6">
           <div class="texte">
-          <embed src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
-          <h3>Soupe aux Chou Vert <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
+          <h3>Soupe aux Chou Vert <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><span class="glyphicon glyphicon-save"></span></a></h3>
+          <embed class="pdf" src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
         </div>
         </div>
       </div>
         <div class="row">
           <div class="col-sm-6 col-sm-6">
             <div class="texte">
-            <embed src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
-            <h3>Flan de Courgettes <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
+            <h3>Flan de Courgettes <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><span class="glyphicon glyphicon-save"></span></a></h3>
+            <embed class="pdf" src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
           </div>
           </div>
           <div class="col-sm-6 col-sm-6">
             <div class="texte">
-            <embed src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
-            <h3>Terrine de poisson au basilic <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
+            <h3>Terrine de poisson au basilic <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><span class="glyphicon glyphicon-save"></span></a></h3>
+            <embed class="pdf" src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
           </div>
         </div>
       </div>
@@ -207,33 +204,32 @@ function m(){
     <article id="sucre">
       <div class="titre">
         <h1>Plats Sucrés</h1>
-        <img class="underline" src="{{ url_for('static',filename='img/underline3.png') }}" alt="underline">
       </div>
       <div class="row">
         <div class="col-sm-6 col-sm-6">
           <div class="texte">
-            <embed src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
-            <h3>Vélouté de Potiron et de Carottes <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
+            <h3>Vélouté de Potiron et de Carottes <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><span class="glyphicon glyphicon-save"></span></a></h3>
+            <embed class="pdf" src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
           </div>
         </div>
         <div class="col-sm-6 col-sm-6">
           <div class="texte">
-          <embed src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
-          <h3>Soupe aux Chou Vert <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
+          <h3>Soupe aux Chou Vert <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><span class="glyphicon glyphicon-save"></span></a></h3>
+          <embed class="pdf" src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
         </div>
         </div>
       </div>
         <div class="row">
           <div class="col-sm-6 col-sm-6">
             <div class="texte">
-            <embed src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
-            <h3>Flan de Courgettes <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
+            <h3>Flan de Courgettes <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><span class="glyphicon glyphicon-save"></span></a></h3>
+            <embed class="pdf" src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
           </div>
           </div>
           <div class="col-sm-6 col-sm-6">
             <div class="texte">
-            <embed src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
-            <h3>Terrine de poisson au basilic <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
+            <h3>Terrine de poisson au basilic <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><span class="glyphicon glyphicon-save"></span></a></h3>
+            <embed class="pdf" src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
           </div>
         </div>
       </div>
@@ -243,33 +239,32 @@ function m(){
     <article id="sel">
       <div class="titre">
         <h1>Plats Salés</h1>
-        <img class="underline" src="{{ url_for('static',filename='img/underline3.png') }}" alt="underline">
       </div>
       <div class="row">
         <div class="col-sm-6 col-sm-6">
           <div class="texte">
-            <embed src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
-            <h3>Vélouté de Potiron et de Carottes <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
+            <h3>Vélouté de Potiron et de Carottes <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><span class="glyphicon glyphicon-save"></span></a></h3>
+            <embed class="pdf" src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
           </div>
         </div>
         <div class="col-sm-6 col-sm-6">
           <div class="texte">
-          <embed src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
-          <h3>Soupe aux Chou Vert <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
+          <h3>Soupe aux Chou Vert <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><span class="glyphicon glyphicon-save"></span></a></h3>
+          <embed class="pdf" src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
         </div>
         </div>
       </div>
         <div class="row">
           <div class="col-sm-6 col-sm-6">
             <div class="texte">
-            <embed src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
-            <h3>Flan de Courgettes <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
+            <h3>Flan de Courgettes <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><span class="glyphicon glyphicon-save"></span></a></h3>
+            <embed class="pdf" src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
           </div>
           </div>
           <div class="col-sm-6 col-sm-6">
             <div class="texte">
-            <embed src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
-            <h3>Terrine de poisson au basilic <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
+            <h3>Terrine de poisson au basilic <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><span class="glyphicon glyphicon-save"></span></a></h3>
+            <embed class="pdf" src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
           </div>
         </div>
       </div>
