--- a/Developpement/static/styles/css/base.css
+++ b/Developpement/static/styles/css/base.css
@@ -62,158 +62,7 @@ body{
 .dropdown:hover .dropdown-menu {
   display: block;
 }
-
-
-
-
-
-
-
-
-
-
-
-/* .navbar a {
-  float: left;
-  font-size: 16px;
-  color: black;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
+#nomUtil{
+  margin-left: 2%;
+  display: inline-flex;
 }
-
-.dropdown {
-  float: left;
-}
-
-.dropdown .dropdown-toggle {
-  font-size: 16px;
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-}
-
-
-.dropdown-menu {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-menu a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.dropdown-menu a:hover {
-  background-color: #ddd;
-}
-
-.dropdown:hover .dropdown-menu {
-  display: block;
-}
-
-
-
-
-
-@font-face {
-  font-family: 'adam';
-  src: url("../font/Quicksand_Bold.otf");
-
-}
-
-@media screen and (min-width: 768px) {
- .navbar:hover .dropdown-toggle:hover{
-   background-color: white;
-}
-
-
- .dropdown-toggle:hover p{
-   color: black;
- }
-
-.navbar-nav img{
-  height: 250%;
-  margin-left: -30%;
-  margin-top: -18%;
-}
-
-.navbar-nav{
-  margin-top: 1%;
-  font-size: 150%;
-  margin-left: -5%;
-  width: auto;
-}
-
-.navbar-collapse{
-  background-color: black;
-}
-
-.navbar-nav:hover .dropdown-toggle:hover{
-  background-color: white;
-  color: black;
-}
-
-li.dropdown:hover > .dropdown-menu {
-    display: block;
-}
-/*  Fin du menu de navigation  */
-
-/*
-.bd-placeholder-img {
-  font-size: 1.125rem;
-  text-anchor: middle;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-@media (min-width: 768px) {
-  .bd-placeholder-img-lg {
-    font-size: 3.5rem;
-  }
-}
-
-
-h1{
-  font-family: 'aaa';
-}
-h2{
-  font-family: 'aaa';
-}
-h3{
-  font-family: 'aaa';
-}
-.color{
-  color:black;
-}
-h1{
-  text-align: center;
-  margin-bottom: 2%;
-}
-#logo{
-  width: 48%;
-  margin-left: -25%;
-  display: flex;
-}
-
-.navbar-default{
-  background-color: black;
-}
-
-.navbar-default p{
-  color:white;
-} */
