--- a/Developpement/templates/base.html
+++ b/Developpement/templates/base.html
@@ -58,12 +58,16 @@
                 <li><a href="/stage/presse/all/0">Presse</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="/stage/recettes/">Recettes</a></li>
+                <li role="separator" class="divider"></li>
 
                 {% if current_user.is_authenticated %}
 
                 <li><a href="/stage/repertoire/">Repertoire</a></li>
+                <li role="separator" class="divider"></li>
                 <li><a href="/stage/partitions/">Partitions</a></li>
+                <li role="separator" class="divider"></li>
                 <li><a href="/stage/souvenirs/">Souvenirs</a></li>
+                <li role="separator" class="divider"></li>
                 <li><a href="/stage/paiement/">Paiement</a></li>
 
                 {% endif %}
@@ -111,8 +115,10 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             {% if current_user.is_authenticated %}
-            <li><a>{{ current_user.username }}</a></li>
-            <li><a href="/other/deconnexion/" style="color: black"><small><span class="glyphicon glyphicon-log-out sommaire"></span></small></a></li>
+            <div id="connect">
+              <p class="nomUtil">{{ current_user.usernameUt }}</p>
+              <li class="nomUtil"><a href="/other/deconnexion/" style="color: black"><small><span class="glyphicon glyphicon-log-out sommaire"></span></small></a></li>
+            </div>
             {% else %}
             <li><a href="/other/connexion/" style="color: black"><small><span class="glyphicon glyphicon-log-in sommaire"></span></small></a></li>
             {% endif %}
