--- a/Developpement/templates/stage/stage_presentation.html
+++ b/Developpement/templates/stage/stage_presentation.html
@@ -101,7 +101,7 @@
               <tbody>
                 {% for stage in dico_stage %}
                 <tr>
-                  <td><a href="/stage/{{stage.intituleSt}}/">{{stage.intituleSt}}</a></td>
+                  <td><a href="/stage/presentation/{{stage.idSt}}">{{stage.intituleSt}}</a></td>
                   <td>{{stage.dateDebSt}} - {{stage.dateFinSt}}</td>
                   <td>{{stage.descSt}}</td>
                 </tr>
