--- a/Developpement/static/styles/css/base.css
+++ b/Developpement/static/styles/css/base.css
@@ -62,7 +62,12 @@ body{
 .dropdown:hover .dropdown-menu {
   display: block;
 }
-#nomUtil{
-  margin-left: 2%;
-  display: inline-flex;
+#connect{
+  overflow:hidden;
+  width:auto;
+  display:inline;
+}
+.nomUtil{
+  float:left;
+  margin-top: 5%;
 }
